Year-3/LPOIS-language-processors-of-intelligent-systems/sem2-lab-3-4/VIOLAParser.py
# Generated from VIOLAParser.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class VIOLAParser ( Parser ):

    grammarFileName = "VIOLAParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'&&'", "'||'", "<INVALID>", "'>'", "'<'", 
                     "'!'", "<INVALID>", "'='", "'+'", "'*'", "'-'", "'/'", 
                     "'++'", "'--'", "','", "'.'", "':'", "';'", "'\"'", 
                     "<INVALID>", "'('", "')'", "'{'", "'}'", "'['", "']'", 
                     "'return'", "<INVALID>", "'void'", "'if'", "'for'", 
                     "'else'", "'elif'", "'case'", "'while'", "'switch'", 
                     "'subr'", "'ref'", "'->'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'\t'" ]

    symbolicNames = [ "<INVALID>", "AND", "OR", "EQUALITY", "GREATER", "LESS", 
                      "NOT", "COMPARISON", "ASSIGNMENT", "ADDITION", "MULTIPLICATION", 
                      "SUBTRACTION", "DIVISION", "INCREMENT", "DECREMENT", 
                      "COMMA", "DOT", "COLON", "SEMICOLON", "QUOTATIONMARK", 
                      "INLINECOMMENT", "LPAREN", "RPAREN", "LCURLY", "RCURLY", 
                      "LSQUARE", "RSQUARE", "RETURN", "TYPE", "VOID", "IF", 
                      "FOR", "ELSE", "ELIF", "CASE", "WHILE", "SWITCH", 
                      "FUNC", "REF", "FUNCRETURN", "STRING", "INT", "ID", 
                      "WS", "NEWLINE", "TAB" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_assignmentStatement = 2
    RULE_assignmentStatementArray = 3
    RULE_expression = 4
    RULE_arithmeticExpressionSimple = 5
    RULE_arithmeticExpressionInBinary = 6
    RULE_unarymath = 7
    RULE_binarymath = 8
    RULE_unaryArithmeticExpression = 9
    RULE_binaryArithmeticExpression = 10
    RULE_primaryExpression = 11
    RULE_arrayAccess = 12
    RULE_arrayDefineForm = 13
    RULE_arraySliceForm = 14
    RULE_functionСall = 15
    RULE_allTypesWithRefs = 16
    RULE_functionDefine = 17
    RULE_functionBody = 18
    RULE_canBeReturned = 19
    RULE_ifStatement = 20
    RULE_ifStatementFirstBlock = 21
    RULE_ifStatementElif = 22
    RULE_ifStatementElse = 23
    RULE_ifExpression = 24
    RULE_unaryif = 25
    RULE_binaryif = 26
    RULE_unaryIfExpression = 27
    RULE_binaryIfExpression = 28
    RULE_ifExpressionInBinary = 29
    RULE_forStatement = 30
    RULE_whileStatement = 31

    ruleNames =  [ "program", "statement", "assignmentStatement", "assignmentStatementArray", 
                   "expression", "arithmeticExpressionSimple", "arithmeticExpressionInBinary", 
                   "unarymath", "binarymath", "unaryArithmeticExpression", 
                   "binaryArithmeticExpression", "primaryExpression", "arrayAccess", 
                   "arrayDefineForm", "arraySliceForm", "functionСall", 
                   "allTypesWithRefs", "functionDefine", "functionBody", 
                   "canBeReturned", "ifStatement", "ifStatementFirstBlock", 
                   "ifStatementElif", "ifStatementElse", "ifExpression", 
                   "unaryif", "binaryif", "unaryIfExpression", "binaryIfExpression", 
                   "ifExpressionInBinary", "forStatement", "whileStatement" ]

    EOF = Token.EOF
    AND=1
    OR=2
    EQUALITY=3
    GREATER=4
    LESS=5
    NOT=6
    COMPARISON=7
    ASSIGNMENT=8
    ADDITION=9
    MULTIPLICATION=10
    SUBTRACTION=11
    DIVISION=12
    INCREMENT=13
    DECREMENT=14
    COMMA=15
    DOT=16
    COLON=17
    SEMICOLON=18
    QUOTATIONMARK=19
    INLINECOMMENT=20
    LPAREN=21
    RPAREN=22
    LCURLY=23
    RCURLY=24
    LSQUARE=25
    RSQUARE=26
    RETURN=27
    TYPE=28
    VOID=29
    IF=30
    FOR=31
    ELSE=32
    ELIF=33
    CASE=34
    WHILE=35
    SWITCH=36
    FUNC=37
    REF=38
    FUNCRETURN=39
    STRING=40
    INT=41
    ID=42
    WS=43
    NEWLINE=44
    TAB=45

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(VIOLAParser.EOF, 0)

        def functionDefine(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VIOLAParser.FunctionDefineContext)
            else:
                return self.getTypedRuleContext(VIOLAParser.FunctionDefineContext,i)


        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(VIOLAParser.SEMICOLON)
            else:
                return self.getToken(VIOLAParser.SEMICOLON, i)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VIOLAParser.StatementContext)
            else:
                return self.getTypedRuleContext(VIOLAParser.StatementContext,i)


        def INLINECOMMENT(self, i:int=None):
            if i is None:
                return self.getTokens(VIOLAParser.INLINECOMMENT)
            else:
                return self.getToken(VIOLAParser.INLINECOMMENT, i)

        def getRuleIndex(self):
            return VIOLAParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = VIOLAParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 64
                    self.functionDefine()
                    self.state = 65
                    self.match(VIOLAParser.SEMICOLON) 
                self.state = 71
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << VIOLAParser.INCREMENT) | (1 << VIOLAParser.DECREMENT) | (1 << VIOLAParser.INLINECOMMENT) | (1 << VIOLAParser.LPAREN) | (1 << VIOLAParser.LSQUARE) | (1 << VIOLAParser.TYPE) | (1 << VIOLAParser.IF) | (1 << VIOLAParser.FOR) | (1 << VIOLAParser.WHILE) | (1 << VIOLAParser.FUNC) | (1 << VIOLAParser.STRING) | (1 << VIOLAParser.INT) | (1 << VIOLAParser.ID))) != 0):
                self.state = 74
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [VIOLAParser.INCREMENT, VIOLAParser.DECREMENT, VIOLAParser.LPAREN, VIOLAParser.LSQUARE, VIOLAParser.TYPE, VIOLAParser.IF, VIOLAParser.FOR, VIOLAParser.WHILE, VIOLAParser.FUNC, VIOLAParser.STRING, VIOLAParser.INT, VIOLAParser.ID]:
                    self.state = 72
                    self.statement()
                    pass
                elif token in [VIOLAParser.INLINECOMMENT]:
                    self.state = 73
                    self.match(VIOLAParser.INLINECOMMENT)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 79
            self.match(VIOLAParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionСall(self):
            return self.getTypedRuleContext(VIOLAParser.FunctionСallContext,0)


        def SEMICOLON(self):
            return self.getToken(VIOLAParser.SEMICOLON, 0)

        def functionBody(self):
            return self.getTypedRuleContext(VIOLAParser.FunctionBodyContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(VIOLAParser.IfStatementContext,0)


        def forStatement(self):
            return self.getTypedRuleContext(VIOLAParser.ForStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(VIOLAParser.WhileStatementContext,0)


        def assignmentStatement(self):
            return self.getTypedRuleContext(VIOLAParser.AssignmentStatementContext,0)


        def assignmentStatementArray(self):
            return self.getTypedRuleContext(VIOLAParser.AssignmentStatementArrayContext,0)


        def getRuleIndex(self):
            return VIOLAParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = VIOLAParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 94
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 81
                self.functionСall()
                self.state = 82
                self.match(VIOLAParser.SEMICOLON)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 84
                self.functionBody()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 85
                self.ifStatement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 86
                self.forStatement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 87
                self.whileStatement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 88
                self.assignmentStatement()
                self.state = 89
                self.match(VIOLAParser.SEMICOLON)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 91
                self.assignmentStatementArray()
                self.state = 92
                self.match(VIOLAParser.SEMICOLON)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(VIOLAParser.ID)
            else:
                return self.getToken(VIOLAParser.ID, i)

        def ASSIGNMENT(self):
            return self.getToken(VIOLAParser.ASSIGNMENT, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VIOLAParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(VIOLAParser.ExpressionContext,i)


        def TYPE(self):
            return self.getToken(VIOLAParser.TYPE, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(VIOLAParser.COMMA)
            else:
                return self.getToken(VIOLAParser.COMMA, i)

        def unaryArithmeticExpression(self):
            return self.getTypedRuleContext(VIOLAParser.UnaryArithmeticExpressionContext,0)


        def getRuleIndex(self):
            return VIOLAParser.RULE_assignmentStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignmentStatement" ):
                listener.enterAssignmentStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignmentStatement" ):
                listener.exitAssignmentStatement(self)




    def assignmentStatement(self):

        localctx = VIOLAParser.AssignmentStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_assignmentStatement)
        self._la = 0 # Token type
        try:
            self.state = 123
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==VIOLAParser.TYPE:
                    self.state = 96
                    self.match(VIOLAParser.TYPE)


                self.state = 99
                self.match(VIOLAParser.ID)
                self.state = 102 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 100
                    self.match(VIOLAParser.COMMA)
                    self.state = 101
                    self.match(VIOLAParser.ID)
                    self.state = 104 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==VIOLAParser.COMMA):
                        break

                self.state = 106
                self.match(VIOLAParser.ASSIGNMENT)
                self.state = 107
                self.expression()
                self.state = 110 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 108
                    self.match(VIOLAParser.COMMA)
                    self.state = 109
                    self.expression()
                    self.state = 112 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==VIOLAParser.COMMA):
                        break

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==VIOLAParser.TYPE:
                    self.state = 114
                    self.match(VIOLAParser.TYPE)


                self.state = 117
                self.match(VIOLAParser.ID)
                self.state = 118
                self.match(VIOLAParser.ASSIGNMENT)
                self.state = 119
                self.expression()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 120
                self.match(VIOLAParser.TYPE)
                self.state = 121
                self.match(VIOLAParser.ID)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 122
                self.unaryArithmeticExpression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentStatementArrayContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(VIOLAParser.ID)
            else:
                return self.getToken(VIOLAParser.ID, i)

        def ASSIGNMENT(self):
            return self.getToken(VIOLAParser.ASSIGNMENT, 0)

        def primaryExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VIOLAParser.PrimaryExpressionContext)
            else:
                return self.getTypedRuleContext(VIOLAParser.PrimaryExpressionContext,i)


        def TYPE(self):
            return self.getToken(VIOLAParser.TYPE, 0)

        def LSQUARE(self):
            return self.getToken(VIOLAParser.LSQUARE, 0)

        def RSQUARE(self):
            return self.getToken(VIOLAParser.RSQUARE, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(VIOLAParser.COMMA)
            else:
                return self.getToken(VIOLAParser.COMMA, i)

        def getRuleIndex(self):
            return VIOLAParser.RULE_assignmentStatementArray

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignmentStatementArray" ):
                listener.enterAssignmentStatementArray(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignmentStatementArray" ):
                listener.exitAssignmentStatementArray(self)




    def assignmentStatementArray(self):

        localctx = VIOLAParser.AssignmentStatementArrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_assignmentStatementArray)
        self._la = 0 # Token type
        try:
            self.state = 153
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 128
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==VIOLAParser.TYPE:
                    self.state = 125
                    self.match(VIOLAParser.TYPE)
                    self.state = 126
                    self.match(VIOLAParser.LSQUARE)
                    self.state = 127
                    self.match(VIOLAParser.RSQUARE)


                self.state = 130
                self.match(VIOLAParser.ID)
                self.state = 133 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 131
                    self.match(VIOLAParser.COMMA)
                    self.state = 132
                    self.match(VIOLAParser.ID)
                    self.state = 135 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==VIOLAParser.COMMA):
                        break

                self.state = 137
                self.match(VIOLAParser.ASSIGNMENT)
                self.state = 138
                self.primaryExpression()
                self.state = 141 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 139
                    self.match(VIOLAParser.COMMA)
                    self.state = 140
                    self.primaryExpression()
                    self.state = 143 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==VIOLAParser.COMMA):
                        break

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 148
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==VIOLAParser.TYPE:
                    self.state = 145
                    self.match(VIOLAParser.TYPE)
                    self.state = 146
                    self.match(VIOLAParser.LSQUARE)
                    self.state = 147
                    self.match(VIOLAParser.RSQUARE)


                self.state = 150
                self.match(VIOLAParser.ID)
                self.state = 151
                self.match(VIOLAParser.ASSIGNMENT)
                self.state = 152
                self.primaryExpression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arithmeticExpressionSimple(self):
            return self.getTypedRuleContext(VIOLAParser.ArithmeticExpressionSimpleContext,0)


        def binaryArithmeticExpression(self):
            return self.getTypedRuleContext(VIOLAParser.BinaryArithmeticExpressionContext,0)


        def getRuleIndex(self):
            return VIOLAParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):

        localctx = VIOLAParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_expression)
        try:
            self.state = 157
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 155
                self.arithmeticExpressionSimple()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 156
                self.binaryArithmeticExpression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArithmeticExpressionSimpleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primaryExpression(self):
            return self.getTypedRuleContext(VIOLAParser.PrimaryExpressionContext,0)


        def unaryArithmeticExpression(self):
            return self.getTypedRuleContext(VIOLAParser.UnaryArithmeticExpressionContext,0)


        def binaryArithmeticExpression(self):
            return self.getTypedRuleContext(VIOLAParser.BinaryArithmeticExpressionContext,0)


        def getRuleIndex(self):
            return VIOLAParser.RULE_arithmeticExpressionSimple

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArithmeticExpressionSimple" ):
                listener.enterArithmeticExpressionSimple(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArithmeticExpressionSimple" ):
                listener.exitArithmeticExpressionSimple(self)




    def arithmeticExpressionSimple(self):

        localctx = VIOLAParser.ArithmeticExpressionSimpleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_arithmeticExpressionSimple)
        try:
            self.state = 162
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 159
                self.primaryExpression()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 160
                self.unaryArithmeticExpression()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 161
                self.binaryArithmeticExpression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArithmeticExpressionInBinaryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primaryExpression(self):
            return self.getTypedRuleContext(VIOLAParser.PrimaryExpressionContext,0)


        def unaryArithmeticExpression(self):
            return self.getTypedRuleContext(VIOLAParser.UnaryArithmeticExpressionContext,0)


        def getRuleIndex(self):
            return VIOLAParser.RULE_arithmeticExpressionInBinary

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArithmeticExpressionInBinary" ):
                listener.enterArithmeticExpressionInBinary(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArithmeticExpressionInBinary" ):
                listener.exitArithmeticExpressionInBinary(self)




    def arithmeticExpressionInBinary(self):

        localctx = VIOLAParser.ArithmeticExpressionInBinaryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_arithmeticExpressionInBinary)
        try:
            self.state = 166
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,16,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 164
                self.primaryExpression()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 165
                self.unaryArithmeticExpression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UnarymathContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INCREMENT(self):
            return self.getToken(VIOLAParser.INCREMENT, 0)

        def DECREMENT(self):
            return self.getToken(VIOLAParser.DECREMENT, 0)

        def getRuleIndex(self):
            return VIOLAParser.RULE_unarymath

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnarymath" ):
                listener.enterUnarymath(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnarymath" ):
                listener.exitUnarymath(self)




    def unarymath(self):

        localctx = VIOLAParser.UnarymathContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_unarymath)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            _la = self._input.LA(1)
            if not(_la==VIOLAParser.INCREMENT or _la==VIOLAParser.DECREMENT):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BinarymathContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ADDITION(self):
            return self.getToken(VIOLAParser.ADDITION, 0)

        def MULTIPLICATION(self):
            return self.getToken(VIOLAParser.MULTIPLICATION, 0)

        def SUBTRACTION(self):
            return self.getToken(VIOLAParser.SUBTRACTION, 0)

        def DIVISION(self):
            return self.getToken(VIOLAParser.DIVISION, 0)

        def getRuleIndex(self):
            return VIOLAParser.RULE_binarymath

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBinarymath" ):
                listener.enterBinarymath(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBinarymath" ):
                listener.exitBinarymath(self)




    def binarymath(self):

        localctx = VIOLAParser.BinarymathContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_binarymath)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 170
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << VIOLAParser.ADDITION) | (1 << VIOLAParser.MULTIPLICATION) | (1 << VIOLAParser.SUBTRACTION) | (1 << VIOLAParser.DIVISION))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UnaryArithmeticExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def unarymath(self):
            return self.getTypedRuleContext(VIOLAParser.UnarymathContext,0)


        def primaryExpression(self):
            return self.getTypedRuleContext(VIOLAParser.PrimaryExpressionContext,0)


        def functionСall(self):
            return self.getTypedRuleContext(VIOLAParser.FunctionСallContext,0)


        def getRuleIndex(self):
            return VIOLAParser.RULE_unaryArithmeticExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnaryArithmeticExpression" ):
                listener.enterUnaryArithmeticExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnaryArithmeticExpression" ):
                listener.exitUnaryArithmeticExpression(self)




    def unaryArithmeticExpression(self):
